Fix SQL syntax error: Replace .tables with valid SQL query

BUG: 513761

The database initialization was using the SQLite shell command ".tables"
which is not valid SQL and causes a syntax error when executed through
QSqlQuery. This prevented KRunner from searching activities and caused
the Activity Bar widget to show incorrect state on startup.

Replace ".tables" with the equivalent SQL query:
"SELECT name FROM sqlite_master WHERE type='table'"

This query achieves the same validation purpose (checking database
integrity) but uses standard SQL syntax that works with Qt's SQL API.